Change default colormap to Viridis

--- a/python/src/Contour_doc.i.in
+++ b/python/src/Contour_doc.i.in
@@ -182,7 +182,7 @@ Examples
 --------
 >>> import openturns as ot
 >>> print(ot.Contour(2,2,ot.Sample(4,1)).getColorMap())
-hsv
+viridis
 
 See Also
 --------
