--- a/python/src/BarPlot_doc.i.in
+++ b/python/src/BarPlot_doc.i.in
@@ -1,5 +1,5 @@
 %feature("docstring") OT::BarPlot
-"BarPlot.
+"Bar plot.
 
 Available constructors:
     BarPlot(*data, origin, legend=' '*)
@@ -29,19 +29,8 @@ lineWidth : float
 Examples
 --------
 >>> import openturns as ot
->>> from math import floor
->>> # Create data
->>> myDistribution = ot.Normal(0.5, 2.0)
->>> sample = myDistribution.getSample(10)
->>> minSample = sample.getMin()[0]
->>> maxSample = sample.getMax()[0] + 0.1
->>> nBars = 4
->>> data = ot.Sample(nBars, [(maxSample - minSample) / nBars, 0])
->>> for i in range(10):
-...     index = int(floor((sample[i, 0] - minSample) / (maxSample - minSample) * nBars))
-...     data[index, 1] += 1
->>> # Create an empty graph
->>> myGraph = ot.Graph('A barplot', 'Realizations', 'Frequency', True, 'upper right')
->>> # Create the barplot
->>> myBarPlot = ot.BarPlot(data, data.getMin()[0], 'red', 'shaded', 'dashed', 'Normal histogram')
->>> myGraph.add(myBarPlot)"
+>>> graph = ot.Graph('BarPlot', 'X', 'Y', True, 'topright')
+>>> origin = 0.0
+>>> data = [[1.0, 2.0], [3.0, 4.0], [2.0, 3.0]]
+>>> barPlot = ot.BarPlot(data, origin, 'orange', 'shaded', 'dashed', 'label')
+>>> graph.add(barPlot)"
