CMake: Set OPENTURNS_PYTHON_MODULE_PATH as string

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -634,9 +634,9 @@ if (BUILD_PYTHON)
     endif ()
 
     if (WIN32)
-      set (OPENTURNS_PYTHON_MODULE_PATH Lib/site-packages CACHE PATH "site-packages dir")
+      set (OPENTURNS_PYTHON_MODULE_PATH Lib/site-packages CACHE STRING "site-packages dir")
     else ()
-      set (OPENTURNS_PYTHON_MODULE_PATH ${CMAKE_INSTALL_LIBDIR}/python${Python_VERSION_MAJOR}.${Python_VERSION_MINOR}/site-packages CACHE PATH "site-packages dir")
+      set (OPENTURNS_PYTHON_MODULE_PATH ${CMAKE_INSTALL_LIBDIR}/python${Python_VERSION_MAJOR}.${Python_VERSION_MINOR}/site-packages CACHE STRING "site-packages dir")
     endif ()
   endif ()
 endif ()
