--- a/python/src/LeastSquaresEquationsSolver_doc.i.in
+++ b/python/src/LeastSquaresEquationsSolver_doc.i.in
@@ -45,4 +45,5 @@ result : :class:`~openturns.Point`
 
 Notes
 -----
-LeastSquaresEquationsSolver might fail and not obtain a result lower than the specified threshold, in this case an error is thrown."
+LeastSquaresEquationsSolver might fail and not obtain a result lower than the
+specified threshold, in this case an error is thrown."
