Take into account some remarks

--- a/python/src/LeastSquaresEquationsSolver_doc.i.in
+++ b/python/src/LeastSquaresEquationsSolver_doc.i.in
@@ -35,7 +35,7 @@ Parameters
 ----------
 function : :class:`~openturns.Function`
     The vectorial function of the system of equations :math:`function_i(x) = 0 \forall i \in {1,...,n}` to be solved. Remark that it is an unbounded resolution.
-startingPoint : class:`~openturns.Point`
+startingPoint : sequence of floats
     The starting point of the optimization algorithm.
 
 Returns
