In LeastSquaresEquationsSolver, allow for user defined optimization
Introduce new {get, set}OptimizationAlgorithm. The purpose is to allow
user sets his own optimization solver. The algorithm might be
incompatible with the problem and then LSES throws an exception when
running solve.

--- a/python/src/LeastSquaresEquationsSolver_doc.i.in
+++ b/python/src/LeastSquaresEquationsSolver_doc.i.in
@@ -74,3 +74,25 @@ Notes
 -----
 LeastSquaresEquationsSolver might fail and not obtain a result lower than the
 specified threshold, in this case an error is thrown."
+
+// ---------------------------------------------------------------------
+
+%feature("docstring") OT::LeastSquaresEquationsSolver::getOptimizationAlgorithm
+"Get the used algorithm for the optimization.
+
+Returns
+-------
+algorithm : :class:`~openturns.OptimizationAlgorithm`
+    The used optimization algorithm.
+"
+
+// ---------------------------------------------------------------------
+
+%feature("docstring") OT::LeastSquaresEquationsSolver::setOptimizationAlgorithm
+"Set the used algorithm for the optimization.
+
+Parameters
+----------
+algorithm : :class:`~openturns.OptimizationAlgorithm`
+    The optimization algorithm to be used.
+"
