Improved GaussLegendre and LegendreFactory
Now, the computation of the nodes and weights of the quadrature rules are done using FastGL
(https://sourceforge.net/projects/fastgausslegendrequadrature/), one of the fastest and most accurate algorithm to do so.

--- a/lib/src/Base/Algo/CMakeLists.txt
+++ b/lib/src/Base/Algo/CMakeLists.txt
@@ -36,6 +36,7 @@ ot_add_source_file (IntegrationAlgorithm.cxx)
 ot_add_source_file (FilonQuadrature.cxx)
 ot_add_source_file (GaussKronrod.cxx)
 ot_add_source_file (GaussKronrodRule.cxx)
+ot_add_source_file (fastgl.cpp)
 ot_add_source_file (GaussLegendre.cxx)
 ot_add_source_file (FejerAlgorithm.cxx)
 ot_add_source_file (IteratedQuadrature.cxx)
