--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -14,6 +14,7 @@ jobs:
     - uses: actions/checkout@v4
     - name: Install
       run: |
+        sudo apt-get update -y
         sudo apt-get install -y python3-pip lintian
         pip3 install flake8 doc8
     - name: Run linter 
