--- a/lib/etc/openturns.conf.in
+++ b/lib/etc/openturns.conf.in
@@ -499,6 +499,7 @@
   <PointConditionalDistribution-RatioUniformCandidateNumber value_int="10000" />
   <PointConditionalDistribution-SmallDimension value_int="6" />
   <PointConditionalDistribution-UseSimplifiedVersion value_bool="true" />
+  <PointConditionalDistribution-InitializeTransformation value_bool="true" />
 
   <!-- OT::JointDistribution parameters -->
   <JointDistribution-UseGenericCovarianceAlgorithm value_bool="false" />
