--- a/lib/etc/openturns.conf.in
+++ b/lib/etc/openturns.conf.in
@@ -500,6 +500,7 @@
   <PointConditionalDistribution-SmallDimension value_int="6" />
   <PointConditionalDistribution-UseSimplifiedVersion value_bool="true" />
   <PointConditionalDistribution-InitializeTransformation value_bool="true" />
+  <PointConditionalDistribution-InitializeSampling value_bool="true" />
 
   <!-- OT::JointDistribution parameters -->
   <JointDistribution-UseGenericCovarianceAlgorithm value_bool="false" />
