--- a/python/src/BernsteinCopulaFactory_doc.i.in
+++ b/python/src/BernsteinCopulaFactory_doc.i.in
@@ -8,11 +8,11 @@ the copula of a multivariate distribution.
 
 The keys of :class:`~openturns.ResourceMap` related to the class are:
 
-- the key `BernsteinCopulaFactory-MinM` and `BernsteinCopulaFactory-MaxM` that define the default range of :math:`m` in the optimization
+- the keys `BernsteinCopulaFactory-MinM` and `BernsteinCopulaFactory-MaxM` that define the default range of :math:`m` in the optimization
   problems computing the optimal bin number according to a specified criteria,
 - the key `BernsteinCopulaFactory-BinNumberSelection` that defines the default criteria to compute the optimal bin number when it is not
   specified,
-- the key `BernsteinCopulaFactory-KFraction` that specifies the fraction of the sample used for the validation in the
+- the key `BernsteinCopulaFactory-KFraction` that defines the fraction of the sample used for the validation in the
   method :meth:`ComputeLogLikelihoodBinNumber`,
 - the key `BernsteinCopulaFactory-SamplingSize`  that defines the :math:`N` parameter used in the
   method :meth:`ComputePenalizedCsiszarDivergenceBinNumber`.
@@ -83,7 +83,6 @@ removed for the result to be a copula. See :class:`~openturns.EmpiricalBernstein
     buildAsEmpiricalBernsteinCopula(*sample, method, f*)
 
 Parameters
-    The fraction of the sample used for the validation. ComputeLogLikelihoodBinNumber
 ----------
 sample : 2-d sequence of float, of dimension *d*
     The sample of size :math:`\sampleSize>0` from which the copula is estimated.
